# calculix

./: .gitignore  BC_TRANSFER_IMPLEMENTATION.md  BEAM_STRESS_IMPROVEMENTS_SUMMARY.md  BEAM_STRESS_INVESTIGATION.md  C3D20R_EXPANSION_STATUS.md  C3D20R_IMPLEMENTATION_PLAN.md  C3D20R_IMPLEMENTATION_STATUS.md  C3D20R_NODE_ORDERING_FIX.md  C3D8_IMPLEMENTATION_PLAN.md  CCXIO_INTEGRATION_COMPLETE.md  CLI_UPDATES_SUMMARY.md  CONTINUATION_SESSION_SUMMARY.md  Cargo.toml  DEVELOPMENT_PLAN.md  DOCUMENTATION_INDEX.md  EXAMPLES_INTEGRATION.md  FINAL_SESSION_REPORT.md  FINAL_SESSION_STATUS.md  IMPLEMENTATION_STATUS.md  IMPROVED_BEAM_STRESS_PLAN.md  ITERATIVE_STRESS_IMPROVEMENT_PLAN.md  MIGRATION_STATUS.md  NEW_ELEMENTS_QUICKSTART.md  PETSC_INTEGRATION.md  PHASE2_2_PROGRESS.md  PHASE2_INP_PARSER_COMPLETE.md  PYNASTRAN_INTEGRATION.md  PYTEST_INTEGRATION_SUMMARY.md  README.md  RUST_SOLVER_FIXTURE_RESULTS.md  SESSION_PROGRESS_REPORT.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-02-09.md  SESSION_SUMMARY_FINAL.md  SOLVER_VALIDATION_TESTS.md  SOLVE_COMMAND_IMPLEMENTATION.md  SOLVE_COMMAND_TUTORIAL.md  STRESS_VALIDATION_ANALYSIS.md  TESTING.md  TEST_SUITE_FIXES.md  (+8 more)
calculix_migration_tooling/: __init__.py  nastran_reader.py
crates/ccx-cli/: Cargo.toml
crates/ccx-cli/src/: main.rs
crates/ccx-io/: Cargo.toml  README.md
crates/ccx-io/python/: README.md  meshio_wrapper.py  nastran_io.py  requirements.txt
crates/ccx-io/src/: converters.rs  error.rs  frd_reader.rs  lib.rs  nastran.rs  output.rs  postprocess.rs  restart.rs  vtk_writer.rs
crates/ccx-io/src/inp/: mod.rs
crates/ccx-solver/: ASSEMBLY_SYSTEM_UPGRADE_COMPLETE.md  ASSEMBLY_UPGRADE_PLAN.md  BEAM_IMPLEMENTATION.md  BEAM_VALIDATION_RESULTS.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  PORTING.md  POSTPROCESSING.md  README.md  SOLVER_STATUS.md  TEST_COVERAGE.md  build.rs
crates/ccx-solver/docs/: PETSC_BACKEND_DESIGN.md
crates/ccx-solver/src/: analysis.rs  assembly.rs  bc_builder.rs  bc_transfer.rs  boundary_conditions.rs  dat_writer.rs  distributed_loads.rs  dynamic_solver.rs  frequency.rs  lib.rs  main.rs  materials.rs  mesh.rs  mesh_builder.rs  modal_solver.rs  nonlinear_solver.rs  postprocess.rs  sets.rs  sparse_assembly.rs
crates/ccx-solver/src/backend/: mod.rs  native.rs  petsc.rs  petsc_config.rs  petsc_wrapper.rs  traits.rs
crates/ccx-solver/src/elements/: beam.rs  beam3.rs  beam_expansion.rs  beam_stress.rs  factory.rs  factory.rs.orig  mod.rs  shell.rs  shell8.rs  solid.rs  solid10.rs  solid20.rs  truss.rs  truss3.rs
crates/ccx-solver/src/ported/: bsort.rs  cident.rs  compare.rs  insertsortd.rs  mod.rs  nident.rs  residual.rs  strcmp1.rs  string_parsers.rs  string_utils.rs  superseded_fortran.rs
crates/ccx-solver/tests/: beam_assembly.rs  beam_examples_validation.rs  beam_integration.rs  debug_bc_application.rs  debug_sparse.rs  debug_sparsity.rs  distributed_loads_integration.rs  end_to_end_truss.rs  examples_validation.rs  integration_tests.rs  modal_validation.rs  postprocess_dat.rs  shell_integration.rs  solid_validation.rs
crates/validation-api/: .dockerignore  Dockerfile  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  cloudbuild.cloudrun.yaml  entrypoint.sh  pyproject.toml  run.sh  test_results.json  validation_report.html
crates/validation-api/app/: __init__.py  database.py  main.py  nastran_converter.py
crates/validation-api/app/templates/: base.html  dashboard.html  examples.html  features.html  module_detail.html  modules.html
crates/validation-api/scripts/: export_test_results.py  generate_html_report.py  import_examples.py  populate_db.py
docs/: FEATURE_COMPARISON.md  calculix_cli.md  ccx_2.23_build_scripts.md  ccx_solver_modernization_roadmap.md  solver_architecture.dot
examples/: simple_truss.inp  three_bar_truss.inp
scratch/: VALIDATION_SUMMARY.md  comprehensive_validation.sh  run_solver_with_output.sh  run_validation.sh  test_implemented_elements.sh  validate_solver.sh  validation_20260211_144724.txt  validation_20260211_150350.txt
scripts/: build_ccx223_default.sh  build_ccx223_executables.sh  build_ccx223_i8.sh  build_ccx223_mfront.sh  build_ccx223_mt.sh  build_coverage_binaries.sh  generate-validation-report.sh  run_full_coverage.sh  start_webapp.sh  tdd.sh  test_rust_solver_fixtures.sh
tests/: conftest.py  test_discovery_contract.py  test_nastran_reader.py  test_rust_solver_suite.py  test_solver_suite.py  testkit.py  (+1 more)
(+1324 files in other folders)
