[package]
name = "ccx-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ccx-gui = { path = "../ccx-gui" }
ccx-solver = { path = "../ccx-solver" }
ccx-model = { path = "../ccx-model" }
ccx-io = { path = "../ccx-io" }
chrono = "0.4"
nalgebra = "0.34"
serde_json = "1.0"

[[bin]]
name = "ccx-cli"
path = "src/main.rs"
