[package]
name = "ccx-io"
version = "0.1.0"
edition = "2024"
authors = ["CalculiX Rust Team"]
description = "I/O utilities for CalculiX with Nastran format support via pyNastran"
license = "GPL-3.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

# PyO3 for Python interop (Nastran I/O via pyNastran)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

[features]
default = []
nastran = ["pyo3"]

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = { version = "0.20", optional = true }
