[package]
name = "ccx-solver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ccx-inp = { path = "../ccx-inp" }
ccx-model = { path = "../ccx-model" }
nalgebra = { version = "0.34", features = ["sparse"] }
nalgebra-sparse = "0.10"
nalgebra-lapack = "0.27"

[features]
default = []
petsc = []

[[bin]]
name = "ccx-solver"
path = "src/main.rs"
